# resume

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  components.json  eslint.config.mjs  findings.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.playwright-mcp/: page-2026-04-15T05-48-09-735Z.yml  page-2026-04-15T05-48-40-430Z.yml  page-2026-04-15T05-49-24-294Z.yml  page-2026-04-15T07-26-02-274Z.yml  page-2026-04-15T07-36-31-863Z.yml
components/: ai-settings-dialog.tsx  auth-form.tsx  color-picker-manager.tsx  color-picker.tsx  error-boundary.tsx  export-button.tsx  floating-action-bar.tsx  full-resume-optimization-dialog.tsx  icon-picker.tsx  jd-analysis-sheet.tsx  job-intention-editor.tsx  module-editor.tsx  pdf-loading.tsx  pdf-viewer.tsx  personal-info-editor.tsx  print-content.tsx  resume-builder.tsx  resume-preview.tsx  rich-text-input.tsx  rich-text-renderer.tsx  rich-text-toolbar-manager.tsx  rich-text-toolbar.tsx  tag-input.tsx  theme-provider.tsx  toaster.tsx  user-center.tsx
docs/: remediation-checklist.md  roadmap.md
hooks/: use-auto-save.ts  use-toast.ts
lib/: ai-config.ts  ai-service.ts  markdown.ts  storage.ts  utils.ts
public/: example.json  template.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_chat.rs  ai_config.rs  ai_service.rs  ai_snapshot.rs  applications.rs  lib.rs  main.rs  pdf.rs  persist.rs  resume.rs  storage.rs
styles/: globals.css  print.css  tiptap.css
types/: ai.ts  resume.ts
(+91 files in other folders)
